複数プロジェクトに適応

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,9 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*"]
+  "include": [
+    "projects/**/*",
+    "utils/**/*",
+    "clients/**/*"
+  ]
 }
