--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "node build.js",
-    "push": "clasp push",
-    "deploy": "pnpm build && pnpm push"
+    "build:project-a": "node build.js project-a",
+    "build:project-b": "node build.js project-b",
+    "build:all": "pnpm run build:project-a && pnpm run build:project-b",
+    "push:project-a": "cd projects/project-a && clasp push",
+    "push:project-b": "cd projects/project-b && clasp push",
+    "deploy:project-a": "pnpm run build:project-a && pnpm run push:project-a",
+    "deploy:project-b": "pnpm run build:project-b && pnpm run push:project-b",
+    "deploy:all": "pnpm run build:all && pnpm run push:project-a && pnpm run push:project-b"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +23,7 @@
     "@types/google-apps-script": "^1.0.99",
     "esbuild": "^0.25.7",
     "esbuild-gas-plugin": "^0.9.0",
+    "glob": "^10.4.5",
     "typescript": "^5.8.3"
   }
 }
