--- a/package.json
+++ b/package.json
@@ -19,11 +19,17 @@
   "license": "ISC",
   "packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad",
   "devDependencies": {
+    "@eslint/js": "^9.31.0",
     "@google/clasp": "3.0.6-alpha",
     "@types/google-apps-script": "^1.0.99",
     "esbuild": "^0.25.7",
     "esbuild-gas-plugin": "^0.9.0",
+    "eslint": "^9.31.0",
+    "eslint-config-prettier": "^10.1.8",
     "glob": "^10.4.5",
-    "typescript": "^5.8.3"
+    "globals": "^16.3.0",
+    "prettier": "^3.6.2",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.37.0"
   }
 }
