--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,5 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "include": [
-    "projects/**/*",
-    "utils/**/*",
-    "clients/**/*"
-  ]
+  "include": ["projects/**/*", "utils/**/*", "clients/**/*"]
 }
